--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
         "api/**/*.php": { "runtime": "vercel-php@0.7.3" }
     },
     "routes": [
-        { "src": "/(.*)", "dest": "/api/read.php" }
+        { "src": "/(.*)", "dest": "/api/index.php" }
     ]
 }
